crates/lowering/tests/snapshots/concrete__lower_type_kinded.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 24..29,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Type",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeConstructor,
                range: 32..37,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Type",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeKinded,
                range: 24..37,
            },
        }: Kinded {
            type: Some(
                Id<syntax::cst::Type>(0),
            ),
            kind: Some(
                Id<syntax::cst::Type>(1),
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
