crates/lowering/tests/snapshots/concrete__lower_type_parenthesized.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeVariable,
                range: 26..27,
            },
        }: Variable {
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: TypeParenthesized,
                range: 24..28,
            },
        }: Parenthesized {
            type: Some(
                Id<syntax::cst::Type>(0),
            ),
        },
    },
    binders: {},
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
