crates/lowering/tests/snapshots/concrete__lower_value_class_member.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.lowering_map"
snapshot_kind: text
---
LoweringMap {
    expr_item: {
        Id<indexing::indexes::ExprItem>(0): ClassMember {
            signature: Some(
                Id<syntax::cst::Type>(4),
            ),
        },
    },
}
