crates/lowering/tests/snapshots/concrete__lower_value_equation.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.lowering_map"
snapshot_kind: text
---
LoweringMap {
    expr_item: {
        Id<indexing::indexes::ExprItem>(0): Value {
            signature: None,
            equations: [
                LoweredEquation {
                    binders: [
                        Id<syntax::cst::Binder>(0),
                    ],
                    guarded: Some(
                        Unconditional {
                            where_expression: Some(
                                WhereExpression {
                                    expression: Some(
                                        Id<syntax::cst::Expression>(0),
                                    ),
                                    bindings: [],
                                },
                            ),
                        },
                    ),
                },
                LoweredEquation {
                    binders: [
                        Id<syntax::cst::Binder>(1),
                    ],
                    guarded: Some(
                        Unconditional {
                            where_expression: Some(
                                WhereExpression {
                                    expression: Some(
                                        Id<syntax::cst::Expression>(1),
                                    ),
                                    bindings: [],
                                },
                            ),
                        },
                    ),
                },
            ],
        },
    },
}
